--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p> Sensitivity analysis</p>
+								<h3> <a href="https://github.com/SivaramAinkaran/Sensitivity-Analysis---Whole-Life-Insurance-"> <i class="fab fa-r-project"></i>
+									 Sensitivity Analysis of Insurance Products </a> </h3>
+								<p> A sensitivity analysis of two insurance products: a whole life annuity payable in
+									arrears and a whole life assurance. The goal of this project is to compare how
+									sensitive these two products are to interest rate changes by comparing their
+									Expected Present Values(EPVs) for three ages (0, 30 and 60) and interest rates
+									0% to 50%.</p>
+								<a href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:77391499-fc0d-309b-9abd-a4f984ab9fd7">
+									<span class="image main"> <img src="images/test.jpg" alt="" /></span> </a>
+								<span class="icon fa-R"></span>
 							</article>
 
 						<!-- Work -->
@@ -342,7 +350,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p  class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
