--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<h3> <a href="https://github.com/SivaramAinkaran/Sensitivity-Analysis---Whole-Life-Insurance-"> <i class="fab fa-r-project"></i>
-									 Sensitivity Analysis of Insurance Products </a> </h3>
-								<p> A sensitivity analysis of two insurance products: a whole life annuity payable in
+								<h3> Sensitivity Analysis of Insurance Products
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Sensitivity-Analysis---Whole-Life-Insurance-" >Github</a></li>
+										<li><a class="button kaggle" href="https://www.kaggle.com/code/sivaramainkaran/sensitivity-analysis-of-insurance-products" >Kaggle</a></li>
+									</ul></h3>
+
+								<p>
+									A sensitivity analysis of two insurance products: a whole life annuity payable in
 									arrears and a whole life assurance. The goal of this project is to compare how
 									sensitive these two products are to interest rate changes by comparing their
 									Expected Present Values(EPVs) for three ages (0, 30 and 60) and interest rates
