--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 									sensitive these two products are to interest rate changes by comparing their
 									Expected Present Values(EPVs) for three ages (0, 30 and 60) and interest rates
 									0% to 50%.</p>
-								<a href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:77391499-fc0d-309b-9abd-a4f984ab9fd7">
-									<span class="image main"> <img src="images/test.jpg" alt="" /></span> </a>
+								<a href="https://drive.google.com/file/d/191sRpapcIuyrYgboiOGw3o9ZrmGyLYFr/view?usp=sharing">
+									<span class="image projects"> <img src="images/test.jpg" alt="" /></span> </a>
 								<span class="icon fa-R"></span>
 							</article>
 
