--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sivaram Ainkaran</h1>
-								<p>A foundational portfolio of work <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								<p>A foundational portfolio of work including<a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
