--- a/index.html
+++ b/index.html
@@ -46,10 +46,55 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<h3> Sensitivity Analysis of Insurance Products
+								<h3> Forecasting: Australian Retail Turnover
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Seasonality-in-Australia-Retail-Turnover" >Github</a></li>
+										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/seasonality-in-australian-retail" >Kaggle</a></li>
+										<li><a class="button pdf" href="https://drive.google.com/file/d/1IFKkUGr34azT9UsRLrbI_j5egCUaoTpv/view?usp=sharing" >PDF Report</a></li>
+									</ul></h3>
+
+								<p>A series of steps to fit forecasting models for Australian Retail Turnover.
+									Includes analysis of seasonality followed by the fitting and comparison of
+									different modelling forecasts with the true value.
+								</p>
+								<a href="https://drive.google.com/file/d/1IFKkUGr34azT9UsRLrbI_j5egCUaoTpv/view?usp=sharing">
+									<span class="image projects"> <img src="images/ARIMA_model.jpg" alt="" /></span> </a>
+
+								<h3> Pricing Tool: Insurance Products
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Life-Insurance-Pricing-Tool" >Github</a></li>
+										<li><a class="button shiny" href="https://sivaramainkaran.shinyapps.io/pricing_tool/" >Shiny</a></li>
+									</ul></h3>
+
+								<p>
+									**NOTE: This is a collaborative group project completed by 4 students** <br>
+									A pricing tool application comparing premiums, reserves and visualising the
+									progress of reserves over time for different insurance products. This tool was
+									created using the "shiny" package and outputs as a "shiny.app".</p>
+								<a href="https://sivaramainkaran.shinyapps.io/pricing_tool/">
+									<span class="image lgprojects"> <img src="images/shiny_app.jpg" alt="" /></span> </a>
+
+								<h3> Pricing Analysis: General Insurance
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/General-Insurance-Pricing-Analysis" >Github</a></li>
+										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/pricing-analysis-general-car-insurance" >Kaggle</a></li>
+										<li><a class="button pdf" href="https://drive.google.com/file/d/1zspG3JvbufC0lYjoa0phWPQNhfnzA07Y/view?usp=sharing" >PDF Report</a></li>
+										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1GdMfeCdZZzccgvG1gXRxgOl0Z0qwLRnV/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
+
+									</ul></h3>
+
+								<p>
+									An analysis of "SuperCar" Insurance's claim amounts made by claimants
+									during the financial year 2019-2020 to determine a suitable pricing model or set of
+									pricing models to assist with setting insurance premiums. </p>
+								<a href="https://drive.google.com/file/d/1zspG3JvbufC0lYjoa0phWPQNhfnzA07Y/view?usp=sharing">
+									<span class="image projects"> <img src="images/exponential.jpg" alt="" /></span> </a>
+
+								<h3> Sensitivity Analysis: Insurance Products
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Sensitivity-Analysis---Whole-Life-Insurance-" >Github</a></li>
 										<li><a class="button kaggle" href="https://www.kaggle.com/code/sivaramainkaran/sensitivity-analysis-of-insurance-products" >Kaggle</a></li>
+										<li><a class="button pdf" href="https://drive.google.com/file/d/191sRpapcIuyrYgboiOGw3o9ZrmGyLYFr/view?usp=sharing" >PDF Report</a></li>
 									</ul></h3>
 
 								<p>
@@ -59,7 +104,7 @@
 									Expected Present Values(EPVs) for three ages (0, 30 and 60) and interest rates
 									0% to 50%.</p>
 								<a href="https://drive.google.com/file/d/191sRpapcIuyrYgboiOGw3o9ZrmGyLYFr/view?usp=sharing">
-									<span class="image projects"> <img src="images/test.jpg" alt="" /></span> </a>
+									<span class="image projects"> <img src="images/sensitivity_analysis.jpg" alt="" /></span> </a>
 								<span class="icon fa-R"></span>
 							</article>
 
