--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<h3> Forecasting: Australian Retail Turnover
+								<h3> <i class="fab fa-r-project"></i>  Forecasting: Australian Retail Turnover
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Seasonality-in-Australia-Retail-Turnover" >Github</a></li>
 										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/seasonality-in-australian-retail" >Kaggle</a></li>
@@ -60,7 +60,7 @@
 								<a href="https://drive.google.com/file/d/1IFKkUGr34azT9UsRLrbI_j5egCUaoTpv/view?usp=sharing">
 									<span class="image projects"> <img src="images/ARIMA_model.jpg" alt="" /></span> </a>
 
-								<h3> Pricing Tool: Insurance Products
+								<h3> <i class="fab fa-r-project"></i> Pricing Tool: Insurance Products
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Life-Insurance-Pricing-Tool" >Github</a></li>
 										<li><a class="button shiny" href="https://sivaramainkaran.shinyapps.io/pricing_tool/" >Shiny</a></li>
@@ -74,7 +74,7 @@
 								<a href="https://sivaramainkaran.shinyapps.io/pricing_tool/">
 									<span class="image lgprojects"> <img src="images/shiny_app.jpg" alt="" /></span> </a>
 
-								<h3> Pricing Analysis: General Insurance
+								<h3> <i class="fab fa-r-project"></i> Pricing Analysis: General Insurance
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/General-Insurance-Pricing-Analysis" >Github</a></li>
 										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/pricing-analysis-general-car-insurance" >Kaggle</a></li>
@@ -90,7 +90,7 @@
 								<a href="https://drive.google.com/file/d/1zspG3JvbufC0lYjoa0phWPQNhfnzA07Y/view?usp=sharing">
 									<span class="image projects"> <img src="images/exponential.jpg" alt="" /></span> </a>
 
-								<h3> Sensitivity Analysis: Insurance Products
+								<h3> <i class="fab fa-r-project"></i> Sensitivity Analysis: Insurance Products
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Sensitivity-Analysis---Whole-Life-Insurance-" >Github</a></li>
 										<li><a class="button kaggle" href="https://www.kaggle.com/code/sivaramainkaran/sensitivity-analysis-of-insurance-products" >Kaggle</a></li>
@@ -105,7 +105,41 @@
 									0% to 50%.</p>
 								<a href="https://drive.google.com/file/d/191sRpapcIuyrYgboiOGw3o9ZrmGyLYFr/view?usp=sharing">
 									<span class="image projects"> <img src="images/sensitivity_analysis.jpg" alt="" /></span> </a>
-								<span class="icon fa-R"></span>
+
+								<h3> <i class="fab fa-r-project"></i> Regression Analysis: Insurance Products
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Regression-Analyses" >Github</a></li>
+										<li><a class="button pdf" href="https://drive.google.com/drive/folders/1MK44TJHg8q5S9VLm4dpvGZNGpOHwtlgD?usp=sharing" >PDF Reports</a></li>
+									</ul></h3>
+
+								<p>
+									A set of regression analyses exploring different data. Includes: Linear model,
+									Logistic model, Generalised additive model and Mixed effects model</p>
+
+								<a href="https://www.kaggle.com/sivaramainkaran/linear-model-tractor-auctions">
+									<span class="image left"> <img src="images/linear.jpg" alt="" /></span> </a>
+								<a href="https://www.kaggle.com/sivaramainkaran/logistic-regression-gun-control" targe="blank">
+									<span class="image left"> <img src="images/Logistic.jpg" alt="" /></span> </a>
+								<a href="https://www.kaggle.com/sivaramainkaran/mixed-effects-regression-nepal-health">
+									<span class="image leftbot"> <img src="images/mixed.jpg" alt="" /></span> </a>
+								<a href="https://www.kaggle.com/code/sivaramainkaran/gam-melbourne-housing" targe="blank">
+									<span class="image leftbot"> <img src="images/GAM.jpg" alt="" /></span> </a>
+								<br clear="left">
+
+								<h3> <i class="fas fa-file-excel"></i> Reverse Mortgage Analysis
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Reverse-Mortgage-Analysis/tree/main" >Github</a></li>
+										<li><a class="button pdf" href="https://drive.google.com/file/d/1unii4RpfOMFwCtNAglVlv55tdyTP0uGG/view?usp=sharing" >PDF Report</a></li>
+										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1SfH37_i2qZcGyaG3QRJIYtr4mlIQ1O1y/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
+									</ul></h3>
+
+								<p>
+									An analysis of Level and Indexed annuities, holding a house as security. The goal
+									is to determine the maximum monthly annuity payment which allows debt to the
+									company paying the annuity to not exceed the value of the house.</p>
+								<a href="https://drive.google.com/file/d/1unii4RpfOMFwCtNAglVlv55tdyTP0uGG/view?usp=sharing">
+									<span class="image projects"> <img src="images/deratio.jpg" alt="" /></span> </a>
+
 							</article>
 
 						<!-- Work -->
