--- a/index.html
+++ b/index.html
@@ -19,26 +19,36 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon fa-gem"></span>
-						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Sivaram Ainkaran</h1>
-								<p>A foundational portfolio of work including <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>A foundational portfolio of work</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#resume">Resume</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+
 							</ul>
+							
 						</nav>
+						<soc>
+							<ul class="social">
+									<li><a href="https://www.linkedin.com/in/sivaram-ainkaran-bb5b2816b/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://github.com/SivaramAinkaran" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									<li><a href="https://www.kaggle.com/sivaramainkaran" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+							</ul>
+						</soc>
+						<soc>
+							<p><b>a.siv510@gmail.com</b></p>
+						</soc>
+
+
 					</header>
+
+
 
 				<!-- Main -->
 					<div id="main">
@@ -46,18 +56,18 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<h3> <i class="fab fa-r-project"></i>  Forecasting: Australian Retail Turnover
+								<h3><i class="fab fa-r-project"></i>  Forecasting: Australian Retail Turnover
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Seasonality-in-Australia-Retail-Turnover" >Github</a></li>
 										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/seasonality-in-australian-retail" >Kaggle</a></li>
-										<li><a class="button pdf" href="https://drive.google.com/file/d/1IFKkUGr34azT9UsRLrbI_j5egCUaoTpv/view?usp=sharing" >PDF Report</a></li>
+										<li><a class="button pdf" href="pdf/australian_retail_turnover.pdf" >PDF Report</a></li>
 									</ul></h3>
 
 								<p>A series of steps to fit forecasting models for Australian Retail Turnover.
 									Includes analysis of seasonality followed by the fitting and comparison of
 									different modelling forecasts with the true value.
 								</p>
-								<a href="https://drive.google.com/file/d/1IFKkUGr34azT9UsRLrbI_j5egCUaoTpv/view?usp=sharing">
+								<a href="pdf/australian_retail_turnover.pdf">
 									<span class="image projects"> <img src="images/ARIMA_model.jpg" alt="" /></span> </a>
 
 								<h3> <i class="fab fa-r-project"></i> Pricing Tool: Insurance Products
@@ -67,7 +77,7 @@
 									</ul></h3>
 
 								<p>
-									**NOTE: This is a collaborative group project completed by 4 students** <br>
+									<i> NOTE: This is a collaborative group project completed by 4 students </i><br>
 									A pricing tool application comparing premiums, reserves and visualising the
 									progress of reserves over time for different insurance products. This tool was
 									created using the "shiny" package and outputs as a "shiny.app".</p>
@@ -78,7 +88,7 @@
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/General-Insurance-Pricing-Analysis" >Github</a></li>
 										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/pricing-analysis-general-car-insurance" >Kaggle</a></li>
-										<li><a class="button pdf" href="https://drive.google.com/file/d/1zspG3JvbufC0lYjoa0phWPQNhfnzA07Y/view?usp=sharing" >PDF Report</a></li>
+										<li><a class="button pdf" href="pdf/general_insurance.pdf" >PDF Report</a></li>
 										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1GdMfeCdZZzccgvG1gXRxgOl0Z0qwLRnV/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
 
 									</ul></h3>
@@ -87,14 +97,14 @@
 									An analysis of "SuperCar" Insurance's claim amounts made by claimants
 									during the financial year 2019-2020 to determine a suitable pricing model or set of
 									pricing models to assist with setting insurance premiums. </p>
-								<a href="https://drive.google.com/file/d/1zspG3JvbufC0lYjoa0phWPQNhfnzA07Y/view?usp=sharing">
+								<a href="pdf/general_insurance.pdf">
 									<span class="image projects"> <img src="images/exponential.jpg" alt="" /></span> </a>
 
 								<h3> <i class="fab fa-r-project"></i> Sensitivity Analysis: Insurance Products
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Sensitivity-Analysis---Whole-Life-Insurance-" >Github</a></li>
 										<li><a class="button kaggle" href="https://www.kaggle.com/code/sivaramainkaran/sensitivity-analysis-of-insurance-products" >Kaggle</a></li>
-										<li><a class="button pdf" href="https://drive.google.com/file/d/191sRpapcIuyrYgboiOGw3o9ZrmGyLYFr/view?usp=sharing" >PDF Report</a></li>
+										<li><a class="button pdf" href="pdf/interest_rate_vs_epv.pdf" >PDF Report</a></li>
 									</ul></h3>
 
 								<p>
@@ -103,7 +113,7 @@
 									sensitive these two products are to interest rate changes by comparing their
 									Expected Present Values(EPVs) for three ages (0, 30 and 60) and interest rates
 									0% to 50%.</p>
-								<a href="https://drive.google.com/file/d/191sRpapcIuyrYgboiOGw3o9ZrmGyLYFr/view?usp=sharing">
+								<a href="pdf/interest_rate_vs_epv.pdf">
 									<span class="image projects"> <img src="images/sensitivity_analysis.jpg" alt="" /></span> </a>
 
 								<h3> <i class="fab fa-r-project"></i> Regression Analysis: Insurance Products
@@ -129,7 +139,7 @@
 								<h3> <i class="fas fa-file-excel"></i> Reverse Mortgage Analysis
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Reverse-Mortgage-Analysis/tree/main" >Github</a></li>
-										<li><a class="button pdf" href="https://drive.google.com/file/d/1unii4RpfOMFwCtNAglVlv55tdyTP0uGG/view?usp=sharing" >PDF Report</a></li>
+										<li><a class="button pdf" href="pdf/reverse_mortgages.pdf" >PDF Report</a></li>
 										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1SfH37_i2qZcGyaG3QRJIYtr4mlIQ1O1y/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
 									</ul></h3>
 
@@ -137,55 +147,112 @@
 									An analysis of Level and Indexed annuities, holding a house as security. The goal
 									is to determine the maximum monthly annuity payment which allows debt to the
 									company paying the annuity to not exceed the value of the house.</p>
-								<a href="https://drive.google.com/file/d/1unii4RpfOMFwCtNAglVlv55tdyTP0uGG/view?usp=sharing">
-									<span class="image projects"> <img src="images/deratio.jpg" alt="" /></span> </a>
+								<a href="pdf/reverse_mortgages.pdf">
+									<span class="image projects"> <img src="images/deratio.png" alt="" /></span> </a>
 
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+						<!-- Resume -->
+							<article id="resume">
+								<h3><blan> <a class="button download" href="pdf/Sivaram_Ainkaran_CV.pdf" >
+									<i class="fa fa-download fa-2x"></i></a></blan></h3>
+								<h3 class="major">Education</h3>
+								<p>
+								<ul class="ume">
+									<li>
+										<flan><span> Monash University</span></flan>
+										<blan><span>Clayton, VIC</span></blan>
+									</li> <br clear="top">
+									<li> <flan> <i> Bachelor of Actuarial Science, Minor in Finance</i></flan></li>
+									<li> <blan> <i> Completed December 2021</i></blan></li>
+								</ul>
+								<ul class="ume">
+									<li>
+										<flan><span> Rossmoyne Senior High School</span></flan>
+										<blan><span>Rossmoyne, WA </span></blan>
+									</li> <br>
+									<li> <flan> <i> Western Australian Certificate of Education</i></flan></li>
+									<li> <blan> <i> ATAR: 95.55</i></blan></li>
+								</ul>
+								<ul class="ume">
+									<li>
+										<flan><span> Google</span></flan>
+										<blan><span> </span></blan>
+									</li> <br>
+									<li> <flan> <i> Google Data Analytics Certificate</i></flan></li>
+									<li> <blan> <i> Completed May 2022</i></blan></li>
+								</ul>
+								</p>
+								<h3 class="major">Experience</h3>
+									<p>
+									<ul class="ume">
+									<li>
+										<flan><span> Rauland Australia</span></flan>
+										<blan><span> MArch 2019 - February 2020</span></blan>
+									</li> <br>
+									<li> <flan> <i> Customer Service Representative</i></flan></li>
+									<li> <blan> <i> Monash Hospital, Clayton VIC</i></blan></li>
+								</ul>
+									<ul class="resume">
+										<li>
+											Processed monetary transactions and resolved any client issues in person and over the phone
+										</li>
+										<li>
+											Mediated conflicts between staff members and empathetically approached any patient issues
+										</li>
+										<li>
+											Ensured products in working condition and repaired faulty products to customer satisfaction
+										</li>
+										<li> 
+											Prepared optimal cold calling/sales strategy based on past 5 years of patient check-in data
+										</li>
+									</ul>
+								<br>
+								<ul class="ume">
+									<li>
+										<flan><span> Vinnies WA</span></flan>
+										<blan><span> November 2017 - February 2018</span></blan>
+									</li> <br>
+									<li> <flan> <i> Customer Service Representative</i></flan></li>
+									<li> <blan> <i> Vinnies, Willetton WA</i></blan></li>
+								</ul>
+									<ul class="resume">
+										<li>
+											Processed monetary transactions and assisted customers with any issues
+										</li>
+										<li>
+											Organised, sorted and displayed donations in a merchantable manner
+										</li>
+										<li>
+											Cooperated with other team members to provide a pleasant environment for everyone
+										</li>
+										
+									</ul>
+
+								</p>
+
+								<h3 class="major">Skills</h3>
+								<p>
+									<ul class="ume">
+									<li>Proficient with R (RStudio), SQL (BigQuery) and MS Excel data analysis; Python;
+										Modelling and forecasting experience; Data and Keynote presentation;
+										Strong communication and teamwork; Adept with MS applications
+									</li>
+									</ul>
+								</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
+								<blan class="image circle"><img src="images/pfp2.jpg"></blan>
+								<h2 class="major">About me</h2>
+								<p>
+									Hi, my name is Sivaram Ainkaran and I am a recent Bachelor of Actuarial Science (minor in Finance) graduate at Monash University. <br>
+									As an aspiring Data Analyst and recent entry into the job market, I hope to bring my
+									strong coding and analysis skills developed through assignments and projects throughout university and further study to an industry setting.<br>
 
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+
+								</p>
 							</article>
 
 						<!-- Elements -->
@@ -432,10 +499,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<p  class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
 
 			</div>
 
