--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 						</div>
 						<nav>
 							<ul>
+								<li><a href="#about">About</a></li>
 								<li><a href="#projects">Projects</a></li>
 								<li><a href="#resume">Resume</a></li>
-								<li><a href="#about">About</a></li>
+
 
 							</ul>
 							
@@ -52,6 +53,21 @@
 
 				<!-- Main -->
 					<div id="main">
+
+						<!-- About -->
+							<article id="about">
+								<blan class="image circle"><img src="images/pfp2.jpg"></blan>
+								<h2 class="major">About me</h2>
+								<p>
+									Hi, my name is Sivaram Ainkaran and I am a recent Bachelor of Actuarial Science (minor in Finance) graduate at Monash University. <br>
+									As an aspiring Data Analyst and recent entry into the job market, I hope to bring my
+									strong coding and analysis skills developed throughout university and further study
+									to an industry setting, to nurture my passions and skillset in a dynamic environment.<br>
+
+
+
+								</p>
+							</article>
 
 						<!-- Projects -->
 							<article id="projects">
@@ -160,6 +176,14 @@
 								<p>
 								<ul class="ume">
 									<li>
+										<flan><span> Google</span></flan>
+										<blan><span> </span></blan>
+									</li> <br>
+									<li> <flan> <i> Google Data Analytics Certificate</i></flan></li>
+									<li> <blan> <i> Completed May 2022</i></blan></li>
+								</ul>
+								<ul class="ume">
+									<li>
 										<flan><span> Monash University</span></flan>
 										<blan><span>Clayton, VIC</span></blan>
 									</li> <br clear="top">
@@ -174,21 +198,13 @@
 									<li> <flan> <i> Western Australian Certificate of Education</i></flan></li>
 									<li> <blan> <i> ATAR: 95.55</i></blan></li>
 								</ul>
-								<ul class="ume">
-									<li>
-										<flan><span> Google</span></flan>
-										<blan><span> </span></blan>
-									</li> <br>
-									<li> <flan> <i> Google Data Analytics Certificate</i></flan></li>
-									<li> <blan> <i> Completed May 2022</i></blan></li>
-								</ul>
 								</p>
 								<h3 class="major">Experience</h3>
 									<p>
 									<ul class="ume">
 									<li>
 										<flan><span> Rauland Australia</span></flan>
-										<blan><span> MArch 2019 - February 2020</span></blan>
+										<blan><span> March 2019 - February 2020</span></blan>
 									</li> <br>
 									<li> <flan> <i> Customer Service Representative</i></flan></li>
 									<li> <blan> <i> Monash Hospital, Clayton VIC</i></blan></li>
@@ -242,18 +258,7 @@
 								</p>
 							</article>
 
-						<!-- About -->
-							<article id="about">
-								<blan class="image circle"><img src="images/pfp2.jpg"></blan>
-								<h2 class="major">About me</h2>
-								<p>
-									Hi, my name is Sivaram Ainkaran and I am a recent Bachelor of Actuarial Science (minor in Finance) graduate at Monash University. <br>
-									As an aspiring Data Analyst and recent entry into the job market, I hope to bring my
-									strong coding and analysis skills developed through assignments and projects throughout university and further study to an industry setting.<br>
 
-
-								</p>
-							</article>
 
 						<!-- Elements -->
 							<article id="elements">
