--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
 									<ul class="ume">
 									<li>
 										<flan><span> Rauland Australia</span></flan>
-										<blan><span> March 2019 - February 2020</span></blan>
+										<blan><span> Monash Hospital, Clayton VIC</span></blan>
 									</li> <br>
 									<li> <flan> <i> Customer Service Representative</i></flan></li>
-									<li> <blan> <i> Monash Hospital, Clayton VIC</i></blan></li>
+									<li> <blan> <i> March 2019 - February 2020</i></blan></li>
 								</ul>
 									<ul class="resume">
 										<li>
@@ -227,10 +227,10 @@
 								<ul class="ume">
 									<li>
 										<flan><span> Vinnies WA</span></flan>
-										<blan><span> November 2017 - February 2018</span></blan>
+										<blan><span> Vinnies, Willetton WA</span></blan>
 									</li> <br>
 									<li> <flan> <i> Customer Service Representative</i></flan></li>
-									<li> <blan> <i> Vinnies, Willetton WA</i></blan></li>
+									<li> <blan> <i> November 2017 - February 2018 </i></blan></li>
 								</ul>
 									<ul class="resume">
 										<li>
