--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 						<!-- About -->
 							<article id="about">
+
 								<blan class="image circle"><img src="images/pfp2.jpg"></blan>
 								<h2 class="major">About me</h2>
 								<p>
@@ -72,6 +73,7 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
+								<div class ="bord">
 								<h3><i class="fab fa-r-project"></i>  Forecasting: Australian Retail Turnover
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Seasonality-in-Australia-Retail-Turnover" >Github</a></li>
@@ -85,7 +87,9 @@
 								</p>
 								<a href="pdf/australian_retail_turnover.pdf">
 									<span class="image projects"> <img src="images/ARIMA_model.jpg" alt="" /></span> </a>
-
+								</div>
+								<br>
+								<div class ="bord">
 								<h3> <i class="fab fa-r-project"></i> Pricing Tool: Insurance Products
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Life-Insurance-Pricing-Tool" >Github</a></li>
@@ -99,7 +103,10 @@
 									created using the "shiny" package and outputs as a "shiny.app".</p>
 								<a href="https://sivaramainkaran.shinyapps.io/pricing_tool/">
 									<span class="image lgprojects"> <img src="images/shiny_app.jpg" alt="" /></span> </a>
+								</div>
 
+								<br>
+								<div class ="bord">
 								<h3> <i class="fab fa-r-project"></i> Pricing Analysis: General Insurance
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/General-Insurance-Pricing-Analysis" >Github</a></li>
@@ -115,7 +122,10 @@
 									pricing models to assist with setting insurance premiums. </p>
 								<a href="pdf/general_insurance.pdf">
 									<span class="image projects"> <img src="images/exponential.jpg" alt="" /></span> </a>
+								</div>
 
+								<br>
+								<div class ="bord">
 								<h3> <i class="fab fa-r-project"></i> Sensitivity Analysis: Insurance Products
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Sensitivity-Analysis---Whole-Life-Insurance-" >Github</a></li>
@@ -131,7 +141,9 @@
 									0% to 50%.</p>
 								<a href="pdf/interest_rate_vs_epv.pdf">
 									<span class="image projects"> <img src="images/sensitivity_analysis.jpg" alt="" /></span> </a>
-
+								</div>
+								<br>
+								<div class ="bord">
 								<h3> <i class="fab fa-r-project"></i> Regression Analysis: Insurance Products
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Regression-Analyses" >Github</a></li>
@@ -152,6 +164,9 @@
 									<span class="image leftbot"> <img src="images/GAM.jpg" alt="" /></span> </a>
 								<br clear="left">
 
+								</div>
+								<br>
+								<div class ="bord">
 								<h3> <i class="fas fa-file-excel"></i> Reverse Mortgage Analysis
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Reverse-Mortgage-Analysis/tree/main" >Github</a></li>
@@ -166,6 +181,7 @@
 								<a href="pdf/reverse_mortgages.pdf">
 									<span class="image projects"> <img src="images/deratio.png" alt="" /></span> </a>
 
+								</div>
 							</article>
 
 						<!-- Resume -->
