--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
 								<h2 class="major">About me</h2>
 								<p>
 									Hi, my name is Sivaram Ainkaran and I am a recent Bachelor of Actuarial Science (minor in Finance) graduate at Monash University. <br>
-									As an aspiring Data Analyst and recent entry into the job market, I hope to bring my
+									My skills largely lie in data analysis and visualisation in R(RStudio) and I am constantly
+									developing these, in addition to my skills in SQL(BigQuery), Tableu and Python,
+									through personal projects and study.<br>
+									As an aspiring Data Analyst and recent entry into the job market, I hope to bring these
 									strong coding and analysis skills developed throughout university and further study
 									to an industry setting, to nurture my passions and skillset in a dynamic environment.<br>
+
 
 
 
