--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<p>
 									Hi, my name is Sivaram Ainkaran and I am a recent Bachelor of Actuarial Science (minor in Finance) graduate at Monash University. <br>
 									My skills largely lie in data analysis and visualisation in R(RStudio) and I am constantly
-									developing these, in addition to my skills in SQL(BigQuery), Tableu and Python,
+									developing these, in addition to my skills in SQL(BigQuery), Tableau and Python,
 									through personal projects and study.<br>
 									As an aspiring Data Analyst and recent entry into the job market, I hope to bring these
 									strong coding and analysis skills developed throughout university and further study
@@ -270,7 +270,7 @@
 								<h3 class="major">Skills</h3>
 								<p>
 									<ul class="ume">
-									<li>Proficient with R (RStudio), SQL (BigQuery) and MS Excel data analysis; Python;
+									<li>Proficient with R (RStudio), SQL (BigQuery), Tableau and MS Excel data analysis; Python;
 										Modelling and forecasting experience; Data and Keynote presentation;
 										Strong communication and teamwork; Adept with MS applications
 									</li>
