--- a/index.html
+++ b/index.html
@@ -78,6 +78,25 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<div class ="bord">
+								<h3><i class="fas fa-database"></i>  Forecasting: Australian Retail Turnover
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Covid-BigQuery" >Github</a></li>
+										<li><a class="button tableau" href="pdf/australian_retail_turnover.pdf" >Tableau</a></li>
+										<li><a class="button query" href="https://console.cloud.google.com/bigquery?sq=1088934068651:81b9c4e580a64e78961b34617943fa4a" >BigQuery</a></li>
+
+									</ul></h3>
+
+								<p>An analysis of Covid data to see the general effect of Covid and the effect vaccines
+									have had on Covid cases and deaths.
+								</p>
+								<a href="https://public.tableau.com/shared/45FQN4BGC?:display_count=n&:origin=viz_share_link">
+									<span class="image lgprojects">  <img src="images/covid_tableau.jpg"/> </span>
+									</a>
+
+
+								</div>
+								<br>
+								<div class ="bord">
 								<h3><i class="fab fa-r-project"></i>  Forecasting: Australian Retail Turnover
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Seasonality-in-Australia-Retail-Turnover" >Github</a></li>
@@ -90,7 +109,7 @@
 									different modelling forecasts with the true value.
 								</p>
 								<a href="pdf/australian_retail_turnover.pdf">
-									<span class="image projects"> <img src="images/ARIMA_model.jpg" alt="" /></span> </a>
+									<span class="image projects">  <img src="images/ARIMA_model.jpg"/> </span> </a>
 								</div>
 								<br>
 								<div class ="bord">
