--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<div class ="bord">
-								<h3><i class="fas fa-database"></i>  Forecasting: Australian Retail Turnover
+								<h3><i class="fas fa-database"></i>  Covid-19: A Brief visualisation
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Covid-BigQuery" >Github</a></li>
 										<li><a class="button tableau" href="pdf/australian_retail_turnover.pdf" >Tableau</a></li>
