--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									have had on Covid cases and deaths.
 								</p>
 								<a href="https://public.tableau.com/shared/45FQN4BGC?:display_count=n&:origin=viz_share_link">
-									<span class="image lgprojects">  <img src="images/covid_tableau.jpg"/> </span>
+									<span class="image lgprojects">  <img src="images/covid_tablea.jpg"/> </span>
 									</a>
 
 
