--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
 
 						<!-- Projects -->
 							<article id="projects">
+
 								<h2 class="major">Projects</h2>
 								<div class ="bord">
-								<h3><i class="fas fa-database"></i>  Covid-19: A Brief visualisation
+								<h3><i class="fas fa-database"></i>  Test
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Covid-BigQuery" >Github</a></li>
-										<li><a class="button tableau" href="pdf/australian_retail_turnover.pdf" >Tableau</a></li>
+										<li><a class="button tableau" href="https://public.tableau.com/app/profile/sivaram.ainkaran/viz/shared/45FQN4BGC" >Tableau</a></li>
 										<li><a class="button query" href="https://console.cloud.google.com/bigquery?sq=1088934068651:81b9c4e580a64e78961b34617943fa4a" >BigQuery</a></li>
 
 									</ul></h3>
@@ -89,7 +90,25 @@
 								<p>An analysis of Covid data to see the general effect of Covid and the effect vaccines
 									have had on Covid cases and deaths.
 								</p>
-								<a href="https://public.tableau.com/shared/45FQN4BGC?:display_count=n&:origin=viz_share_link">
+								<div class='tableauPlaceholder' id='viz1653285411023' style='position: relative'><noscript><a href='#'><img alt='Vaccinations vs. Covid-19 Lethality - February 2021 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVizzes&#47;Vaccinationsvs_Covid-19Lethality&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CovidVizzes&#47;Vaccinationsvs_Covid-19Lethality' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVizzes&#47;Vaccinationsvs_Covid-19Lethality&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1653285411023');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.6)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+								</div>
+								<br>
+
+								<h2 class="major">Projects</h2>
+								<div class ="bord">
+								<h3><i class="fas fa-database"></i>  Covid-19: A Brief visualisation
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Covid-BigQuery" >Github</a></li>
+										<li><a class="button tableau" href="https://public.tableau.com/app/profile/sivaram.ainkaran/viz/shared/45FQN4BGC" >Tableau</a></li>
+										<li><a class="button query" href="https://console.cloud.google.com/bigquery?sq=1088934068651:81b9c4e580a64e78961b34617943fa4a" >BigQuery</a></li>
+
+									</ul></h3>
+
+								<p>An analysis of Covid data to see the general effect of Covid and the effect vaccines
+									have had on Covid cases and deaths.
+								</p>
+								<a href="https://public.tableau.com/app/profile/sivaram.ainkaran/viz/shared/45FQN4BGC">
 									<span class="image lgprojects">  <img src="images/covid_tablea.jpg"/> </span>
 									</a>
 
